<resources>
    <string name="content_error_msg">contenido nulo</string>
    <string name="vote_canceled_receipt_lbl">recibo de anulación de voto</string>
    <string name="loading_data_msg">cargando datos...</string>
    <string name="wait_msg">por favor, espere</string>
    <string name="sending_data_lbl">enviando datos</string>
    <string name="back_to_cancel_lbl">pulsar \'atrás\' para cancelar</string>
    <string name="voting_closed_lbl">votación cerrada</string>
    <string name="voting_pending_lbl">faltan %1$s horas para abrir</string>
    <string name="voting_open_lbl">faltan %1$s horas para cerrar</string>
    <string name="already_voted_lbl">usted ha elegido en este asunto la opción \'%1$s\'</string>
    <string name="closed_upper_lbl">cerrado</string>
    <string name="author_lbl">publicado por</string>
    <string name="init_lbl">inicio</string>
    <string name="finish_lbl">fin</string>
    <string name="remaining_lbl">%1$s horas para cerrar</string>
    <string name="pending_lbl">%1$s horas para abrir</string>
    <string name="option_selected_msg">seleccionada opción \'%1$s\'</string>
    <string name="voting_system_lbl">sistema de votación</string>
    <string name="access_control_lbl">control de acceso</string>
    <string name="subject_lbl">asunto</string>
    <string name="menuSync">sincronizar</string>
    <string name="processing_lbl">procesando</string>
    <string name="initializing_app_lbl">preparando aplicación</string>
    <string name="publish_voting_caption">publicando votación</string>
    <string name="publishing_document_msg">publicando documento...</string>
    <string name="publish_voting_OK_prefix_msg">la votación</string>
    <string name="publish_document_OK_sufix_msg">se ha publicado correctamente</string>
    <string name="publish_document_ERROR_msg">error publicando el documento</string>
    <string name="publish_document_lbl">publicar documento</string>
    <string name="publish_voting_lbl">publicar votación</string>
    <string name="loading_info_msg">cargando información, por favor espere</string>
    <string name="pdf_signed_by_lbl">firmado electrónicamente por</string>
    <string name="BACKUP_REQUEST">solicitud de copia de seguridad</string>
    <string name="VOTING_PUBLISHING">publicación de documento de votación</string>
    <string name="EVENT_CANCELLATION">cancelar evento</string>
    <string name="operationNotFoundErrorMsg">operación desconocida</string>
    <string name="eventVSDataWithErrors">errores en datos del evento</string>
    <string name="statusCodeNotFoundErrorMsg">falta código de estado</string>
    <string name="errorEmail">debe proporcionar una dirección de correo válida</string>
    <string name="eventVsCancellationDataErrorMsg">error en los datos de cancelación de evento</string>
    <string name="receiverNotFoundErrorMsg">falta el name de destinatario del documento firmado</string>
    <string name="panel_principal_lbl">panel principal</string>
    <string name="search_hint">buscar...</string>
	<string name="guardar_recibo_voto_label">guardar recibo</string>
	<string name="remove_receipt_lbl">borrar recibo</string>
	<string name="remove_receipt_msg">¿seguro que desea borrar recibo?</string>
    <string name="search_label"></string>
    <string name="search_invoke">búsquedas</string>
    <string name="empty_search_lbl">consulta sin resultados</string>
	<string name="pin_for_new_cert_msg">introduzca el código PIN que usará para firmar con el
        certificado, no lo olvide, se le pedirá para completar la instalación en el teléfono una vez
        haya verificado su identidad en un centro autorizado</string>
	<string name="pin_dialog_caption">pin de firma</string>
	<string name="invalidPin">código pin inválido</string>
	<string name="pin_short">código pin debe tener al menos %1$d caracteres</string>
	<string name="enter_pin_import_cert_msg">introduzca el pin que eligió al solicitar el certificado</string>
	<string name="password_mismatch">los códigos pin no coinciden, inténtelo de nuevo</string>
	<string name="repeat_password">vuelva a introducir el código pin</string>
	<string name="givenname_missing_msg">introduzca el nombre</string>
	<string name="surname_missing_msg">introduzca los apellidos</string>
	<string name="searchLabel">buscar</string>
	<string name="app_unstable_msg">la aplicación tiene errores graves, por favor, vuelva a instalarla</string>
	<string name="vote_cert_request_error_msg">no existe ningún certificado de voto</string>
    <string name="operations_lbl">operaciones</string>
    <string name="app_name">votaciones</string>
    <string name="request_cert_msg">tramitando solicitud</string>
    <string name="exception_lbl">excepción</string>
    <string name="cancel_back_msg">pulsar \'atrás\' para cancelar</string>
    <string name="connecting_caption">conectando...</string>
    <string name="getting_representatives_lbl">obteniendo representantes...</string>
    <string name="cert_state_msg">comprobando el estado de la solicitud de certificado</string>
    <string name="cert_downloaded_msg">el certificado de usuario está disponible</string>
    <string name="request_msg_subject">[solicitud acceso - %1$s]</string>
    <string name="vote_msg_subject">[voto]</string>
    <string name="cancel_vote_msg_subject">[anulación de voto]</string>
    <string name="canceled_lbl">anulado</string>
    <string name="cancel_vote_result_msg">su voto para el asunto \'%1$s\' ha sido anulado, puede volver votar de nuevo</string>
    <string name="saved_cancel_vote_recepit_msg">puede encontrar el recibo de la cancelación de este voto en la lista de recibos</string>
    <string name="open_cancel_vote_receipt_lbl">abrir recibo de cancelación</string>
    <string name="pin_error_msg">¿seguro que la contraseña es correcta?</string>
    <string name="sign_send_msg">firmar y enviar</string>
    <string name="select_representative_button">seleccionar como representante</string>
    <string name="voted_lbl">seleccionada opción</string>
    <string name="cancel_vote_lbl">anular voto</string>
    <string name="open_recepit_lbl">abrir recibo</string>
    <string name="cancel_vote_msg">si continua anulará su voto</string>
    <string name="save_receipt_lbl">guardar recibo</string>
    <string name="app_name_lbl">aplicación de votación</string>
    <string name="eventsVS_label">eventos</string>
    <string name="eventVS_label">evento</string>
    <string name="solicitud_csr">solicitud csr</string>
    <string name="enviarVoto">enviar Voto</string>
    <string name="receipt_error_msg">error validando recibo de voto</string>
    <string name="cert_not_found_caption">falta certificado</string>
    <string name="update_lbl">actualizar</string>
    <string name="request_certificate_menu">solicitar certificado</string>
    <string name="receipts_lbl">recibos</string>
    <string name="receipt_lbl">recibo</string>
    <string name="receipt_list_screen_caption">recibos guardados por el usuario</string>
    <string name="receipt_options_dialog_msg">opciones disponibles para el recibo</string>
    <string name="canceling_vote_caption">anulando voto</string>
    <string name="canceling_access_request_msg">problemas con el servicio, por favor inténtelo mas tarde</string>
    <string name="no_receipts">no tiene guardado ningún recibo</string>
    <string name="options_lbl">opciones</string>
    <string name="uservs_cert_request_activity_text">no dispone de ningún
        certificado con el que poder acceder a los servicios que requieren firma, ¿desea solicitar el certificado?</string>
    <string name="cert_data_confirm_msg"><![CDATA[<b>nombre: </b>%1$s<br/>
        <b>apellidos: </b>%2$s<br/>
        <b>nif: </b>%3$s<br/>
        <b>teléfono móvil: </b>%4$s<br/>
        <b>email: </b>%5$s<br/>]]></string>
    <string name="request_cert_result_activity"><![CDATA[para poder votar necesita tener
        instalado un certificado<br/><br/>usted ya ha solicitado el certificado, ahora hace falta verificar
        su identidad, para ello puede presentarse en cualquiera de <br/><br/>
        <a href="%1$s"> las siguientes direcciones</a>]]></string>
    <string name="search_query_info_msg"><![CDATA[<b>resultado de la busqueda</b>: %1$s]]></string>
    <string name="access_request_repeated_msg"><![CDATA[usted ya ha votado en el asunto \'%1$s\']]></string>
    <string name="access_request_repeated_caption">error, voto repetido</string>
    <string name="access_request_repeated_url_msg"><![CDATA[
        <a href="%1$s">Pulse aquí</a> para acceder a la solicitud que le impide volver a votar sobre este asunto]]></string>
    <string name="cert_install_error_msg">error instalando certificado de usuario</string>
    <string name="request_cert_result_activity_ok">el certificado se ha importado correctamente</string>
    <string name="request_cert_again_button">volver a solicitar el certificado</string>
    <string name="install_cert_button">instalar el certificado</string>
    <string name="go_app_button">ir a la aplicación</string>
    <string name="request_cert_again_msg"><![CDATA[si vuelve a solicitar el certificado deberá personarse
        en las instalaciones que se le indiquen para verificar su identidad.<br/>
        ¿desea continuar?]]></string>
    <string name="documents_lbl">documentos</string>
    <string name="request_user_cert_error_msg">error comprobando el estado de la solicitud</string>
    <string name="cancel_lbl">cancelar</string>
    <string name="continue_lbl">continuar</string>
    <string name="request_lbl">solicitar</string>
    <string name="nif_lbl">introduzca su nif</string>
    <string name="representative_nif_lbl">introduzca el nif del representante que desee editar</string>
    <string name="password_label">contraseña del certificado</string>
    <string name="dialogo_password_text_entry">introducir contraseña</string>
    <string name="repeat_password_label">repita la contraseña</string>
    <string name="close_lbl">cerrar</string>
    <string name="ok_lbl">ok</string>
    <string name="accept_lbl">aceptar</string>
    <string name="request_certificate_form_lbl">datos del certificado de usuario</string>
	<string name="empty_fields_msg">debe rellenar todos los campos</string>
	<string name="password_error_msg">las contraseñas no coinciden</string>
	<string name="error_lbl">error</string>
	<string name="msg_lbl">mensaje</string>
	<string name="operation_ok_msg">operación completada con éxito</string>
    <string name="operation_error_msg">error en la operación</string>
    <string name="close_app_lbl">cerrar aplicación</string>
    <string name="check_representative_lbl">comprobar mi representante</string>
    <string name="representative_revoke_button">dar de baja como representante</string>
    <string name="edit_representative_lbl">editar datos de representante</string>
    <string name="vote_options_lbl">opciones de la votación</string>
    <string name="cancel_anonymouys_representation_lbl">cancelar representación anónima</string>
    <string name="representative_list_lbl">lista de representantes</string>
    <string name="options_for_representatives_lbl">opciones para representantes</string>
    <string name="new_representative_lbl">dar de alta como representante</string>
    <string name="update_signers_info_lbl">actualizar datos</string>
    <string name="wallet_lbl">monedero</string>
    <string name="admin_cooins_menu_item">administración de cooins</string>
    <string name="publish_poll_lbl">publicar votación</string>
    <string name="date_election_lbl">fecha de la consulta</string>
    <string name="currency_prompt">moneda</string>
    <string name="operation_prompt">tipo de operación</string>
    <string name="address_lbl">dirección</string>
    <string name="postal_code_lbl">código postal</string>
    <string name="location_lbl">localidad</string>
    <string name="province_lbl">provincia</string>
    <string name="country_lbl">país</string>
    <string name="save_lbl">guardar</string>
</resources>