<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:votingSystem="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search_item"
          android:title="@string/searchLabel"
          votingSystem:showAsAction="always"
          android:orderInCategory="0"
          android:icon="@android:drawable/ic_menu_search"
          android:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/update"
        android:orderInCategory="1"
        votingSystem:showAsAction="never"
        android:title="@string/update_lbl"/>


    <group android:id="@+id/general_items">
        <item android:id="@+id/publish_document"
            android:orderInCategory="2"
            votingSystem:showAsAction="never"
            android:title="@string/publish_poll_lbl"/>
    </group>

</menu> 
