<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/update_signers_info"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/update_signers_info_lbl"/>

    <group android:id="@+id/dev_items">
        <item android:id="@+id/open_cooin_grid"
            android:orderInCategory="1"
            android:showAsAction="never"
            android:icon="@android:drawable/btn_plus"
            android:title="@string/wallet_lbl"/>
    </group>

    <item android:id="@+id/cooins_menu_user_item"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/cooins_menu_user_lbl"/>

    <item android:id="@+id/admin_cooins_menu_item"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/admin_cooins_menu_item"/>

</menu>