<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

    <include layout="@layout/toolbar_vs" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/uservs_cert_request_activity_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/cancel_lbl"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/cancel_22"
            android:text="@string/cancel_lbl"
            android:textStyle="bold" />

        <Button
            android:id="@+id/request_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/accept_22"
            android:maxWidth="100dp"
            android:text="@string/request_lbl"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
