<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <include layout="@layout/toolbar_vs" />

    <ScrollView android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="4dp" android:gravity="center_horizontal">

            <TextView android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="50dp"
                android:gravity="center_vertical|center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button android:id="@+id/go_app_button"
                android:layout_width="240dip"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/next_22"
                android:text="@string/go_app_button" />

            <Button
                android:id="@+id/insert_pin_button"
                android:layout_width="240dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/fa_cert_22"
                android:text="@string/install_cert_button" />

            <Button
                android:id="@+id/request_cert_button"
                android:layout_width="240dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@android:drawable/ic_input_get"
                android:text="@string/request_cert_again_button" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>