<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/address_lbl"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText android:id="@+id/address"
                android:layout_height="wrap_content"
                android:layout_width="300dp"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:gravity="center_vertical|center_horizontal">
                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/postal_code_lbl"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/postal_code"
                android:layout_height="wrap_content"
                android:layout_width="300dp"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:singleLine="true"
                android:inputType="phone"
                android:imeOptions="actionNext"
                android:gravity="center_vertical|center_horizontal">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/location_lbl"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/location"
                android:layout_height="wrap_content"
                android:layout_width="240dp"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:gravity="center_vertical|center_horizontal">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/province_lbl"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/province"
                android:layout_height="wrap_content"
                android:layout_width="240dp"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:gravity="center_vertical|center_horizontal">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/country_lbl"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner android:id="@+id/country_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:prompt="@string/country_lbl"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_marginBottom="40dip"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/cancel_lbl"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="20dip"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/cancel_22"
                    android:text="@string/cancel_lbl"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/accept_22"
                    android:text="@string/save_lbl"
                    android:textStyle="bold" />
            </LinearLayout>
    </LinearLayout>
</ScrollView>