<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:fillViewport="true"
              android:orientation="vertical"
              android:gravity="center">
    <Spinner android:id="@+id/operation_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/operation_prompt" />

    <LinearLayout android:id="@+id/currency_amount_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button android:id="@+id/btn_minus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="-" />

        <EditText android:id="@+id/amount_text"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:gravity="center"
            android:focusable="false"
            android:text="0" />

        <Spinner android:id="@+id/currency_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/currency_codes"
            android:prompt="@string/currency_prompt"
            android:paddingLeft="5dp"/>

        <Button android:id="@+id/btn_plus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="+" />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="15dip" android:layout_marginBottom="40dip"
        android:layout_gravity="center_horizontal">
        <Button android:id="@+id/request_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:gravity="right"
            android:drawableLeft="@drawable/accept_22"
            android:text="@string/request_lbl"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>