<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_vs" />

    <ScrollView android:id="@+id/scroller"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">
            <TextView android:id="@+id/eventFieldsCaption" android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/event_subject"
                android:text ="@string/vote_options_lbl"
                android:layout_width="match_parent"
                android:layout_margin="15dp"
                android:singleLine="true"
                android:textSize="24sp"
                android:gravity="center_vertical|center_horizontal">
            </TextView>
            <LinearLayout android:id="@+id/optionContainer" android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"/>
            <EditText android:id="@+id/subject"
                android:layout_height="wrap_content"
                android:hint="@string/subject_lbl"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/dateFinish"
                android:gravity="center_vertical|center_horizontal">
            </EditText>
            <EditText android:id="@+id/date_election"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:hint="@string/date_election_lbl"
                android:gravity="center_vertical|center_horizontal">
            </EditText>
            <fragment android:name="org.votingsystem.android.fragment.EditorFragment"
                android:id="@+id/editor"
                android:tag="EditorFragment"
                android:layout_width="match_parent"
                android:layout_height="fill_parent" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>